--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: c
 
 compiler:
   - gcc
+  
+osx_image: xcode9.2
 
 before_script:
   - ./autogen.sh
@@ -10,6 +12,5 @@ script:
   - ./configure
   - make
 
-matrix:
-  - exclude "iOS Miner/"
+
 sudo: false
