--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+os: osx
+
 language: c
 
 compiler:
   - clang
   
 osx_image: xcode9.2
+
+before_install:
+  - brew update && brew bundle
 
 before_script:
   - ./autogen.sh
