--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-os: osx
-
 language: c
 
 compiler:
@@ -11,7 +9,7 @@ notifications:
 osx_image: xcode9.2
 
 before_install:
-  - brew update && brew bundle
+  - apt-get install libcurl4-openssl-dev  
 
 before_script:
   - ./autogen.sh
