--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 osx_image: xcode9.2
 
 before_install:
-  - apt-get install libcurl4-openssl-dev  
+  - sudo apt-get install libcurl4-openssl-dev  
 
 before_script:
   - ./autogen.sh
@@ -20,4 +20,4 @@ script:
   - make
 
 
-sudo: false
+sudo: flase
