--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os: osx
+
 language: c
 
 compiler:
@@ -9,7 +11,7 @@ notifications:
 osx_image: xcode9.2
 
 before_install:
-  - sudo apt-get install libcurl4-openssl-dev  
+  - brew update && brew bundle 
 
 before_script:
   - ./autogen.sh
