--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,11 @@ language: c
 
 before_install:
   - brew update && brew bundle
-  - sudo ./install-curl.sh
+
+install:
+  - wget https://github.com/curl/curl/releases/download/curl-7_58_0/curl-7.58.0.tar.gz
+  - tar -xzvf curl-7.58.0.tar.gz
+  - pushd curl-7.58.0 && ./configure --prefix=/usr && make && sudo make install && popd
 
 before_script:
   - ./autogen.sh
@@ -23,4 +27,4 @@ script:
   - make
 
 
-sudo: true
+sudo: false
