--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
 language: c
 
 before_install:
-  - brew update && brew bundle
+  - brew outdated && brew update && brew bundle
 
 install:
   - wget https://github.com/curl/curl/releases/download/curl-7_58_0/curl-7.58.0.tar.gz
