--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 install:
   - wget https://github.com/curl/curl/releases/download/curl-7_58_0/curl-7.58.0.tar.gz
   - tar -xzvf curl-7.58.0.tar.gz
-  - pushd curl-7.58.0 && ./configure --prefix=/usr && make && sudo make install && popd
+  - pushd curl-7.58.0 && ./configure --prefix=/usr && sudo make && sudo make install && popd
 
 before_script:
   - ./autogen.sh
