--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,7 @@ notifications:
 language: c
 
 before_install:
-  - brew outdated || brew update && brew bundle
-
-install:
-  - wget https://github.com/curl/curl/releases/download/curl-7_58_0/curl-7.58.0.tar.gz
-  - tar -xzvf curl-7.58.0.tar.gz
-  - pushd curl-7.58.0 && ./configure --prefix=/usr && sudo make && sudo make install && popd
+  - brew update && brew bundle
 
 before_script:
   - ./autogen.sh
