--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 notifications:
   email: false
   
-language: c
+language: objc
 
 before_install:
   - brew update && brew bundle
@@ -23,4 +23,4 @@ script:
   - make
 
 
-sudo: required
+sudo: false
